services/stress/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: stress

spec:
  replicas: 1

  selector:
    matchLabels:
      app: stress

  template:
    metadata:
      labels:
        app: stress

    spec:
      containers:
      - name: stress
        image: mykaelhunter/stress:latest

        ports:
        - containerPort: 8000
