services/stress/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: stress

spec:
  selector:
    app: stress

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
