services/stress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: stress

spec:

  rules:

  - host: stress.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: stress

            port:

              number: 80
